// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3x3 mask 1`] = `
[
  Roi {
    "height": 2,
    "id": 1,
    "map": {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "origin": {
      "column": 0,
      "row": 0,
    },
    "surface": 4,
    "width": 3,
  },
  Roi {
    "height": 1,
    "id": 2,
    "map": {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "origin": {
      "column": 2,
      "row": 2,
    },
    "surface": 1,
    "width": 1,
  },
]
`;

exports[`3x3 mask 2`] = `
[
  Roi {
    "height": 2,
    "id": -1,
    "map": {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "origin": {
      "column": 0,
      "row": 1,
    },
    "surface": 4,
    "width": 3,
  },
]
`;
